# zdevtools

.github/workflows/: unm.yml
glazer-v1.2.0/: CHANGELOG.md  GRAMMAR.txt  LICENSE.md  MANUAL.md  Makefile  README.md  assemble.c  assemble.h  chars.c  chars.h  defs.c  defs.h  errors.c  errors.h  eval.c  eval.h  file.c  file.h  hello.asm  huff.c  huff.h  intern.c  intern.h  lex.c  lex.h  life.asm  main.c  main.h  node.c  node.h  opcodes.c  opcodes.h  output.c  output.h  parse.c  parse.h  resolve.c  resolve.h  symbol.c  symbol.h  (+8 more)
glazer-v1.2.0/misc/: syntax.vim
zabbrev-9abdeec/: .gitignore  Makefile.am  README  configure.ac  version.sh
zabbrev-9abdeec/doc/: Makefile.am  zabbrev.1  zabbrev.texi
zabbrev-9abdeec/src/: Makefile.am  gametext.c  main.c  optimal_parse.c  suffix_array.c  suffix_array.h  util.c  util.h  zabbrev.c  zabbrev.h
zdevtools-2.1.2/: LICENSE  NEWS  README
zdevtools-2.1.2/za/: Cargo.toml  README.md  za.1
zdevtools-2.1.2/za/src/: main.rs
zdevtools-2.1.2/za/src/asm/: mod.rs
zdevtools-2.1.2/za/src/asm/parser/: .gitignore  mod.rs  z2.lalrpop  z3.lalrpop  z4.lalrpop  z5.lalrpop  z6.lalrpop
zdevtools-2.1.2/zd/: Cargo.toml  clippy.toml  zd.1
zdevtools-2.1.2/zd/src/: dis.rs  main.rs  sources.rs  standard.rs  visual.rs
